--- a/public/index.html
+++ b/public/index.html
@@ -24,13 +24,8 @@
 			<div id="loggedin">
 				<h1>Receiptify</h1>
 				<h2>Spotify Playlist Receipt Generator</h2>
-				<div id="playlists"></div>
-		
-				  <!-- <script>
-					function myFunction() {
-					  alert("The form was submitted");
-					}
-					</script> -->
+				<div id="dropdown"></div>
+				<p id="demo"></p>
 				<div id="options">
 					<button class="btn" id="long_term">All Time</button>
 				</div>
@@ -39,17 +34,24 @@
 		</div>
 
 		<script id="user-playlists-template" type="text/x-handlebars-template">
-			<form>
-				<label for="cars">Choose a playlist:</label>
-				<select name="cars" id="cars">
+			<form id="selection">
+				<label for="playlists">Choose a playlist:</label>
+				<select name="playlists" id="playlists">
 				  {{#each playlists}}
-				  <option id="volvo">{{this.name}}</option>
+				  <option id="playlist">{{this.name}}</option>
 				  {{/each}}
 				</select>
 				<br><br>
-				<input type="submit" id="pleasework" value="Submit">
 			  </form>
+			  <button class="btn" onclick="myFunction()" id="submit">Submit</button>
 		  </script>
+
+		  <script>
+			function myFunction() {
+			  var x = document.getElementById("selection").elements[0].value;
+			  document.getElementById("demo").innerHTML = x;
+			}
+			</script>
 
 		<script id="user-profile-template" type="text/x-handlebars-template">
 			<div class='receiptContainer'>
