changed cardholder to playlist owner

--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
 					AUTH CODE: 053183
 				</p>
 				<p class='date'>
-					CARDHOLDER: {{name}}
+					CARDHOLDER: {{owner}}
 				</p>
 				<div class='thanks'>
 					<p>
