--- a/public/index.html
+++ b/public/index.html
@@ -127,9 +127,9 @@
 			</div>
 			<button class="btn" id="download">Download Image</button>
 		</script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
-		<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-		<script src="http://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
+		<script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
+		<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 		<script src="dom-to-image.min.js"></script>
 		<script src="FileSaver.min.js"></script>
 		<script src="server.js"></script>
