--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 					This website was inspired by the Instagram account <a href="https://www.instagram.com/albumreceipts/">@albumreceipts</a>!</p>
 				</p>
 				<p class="info">
-					Original by <a href="https://michellexliu.github.io/">Michelle Liu</a>, modified by Amanda Chesin.</p>
+					Original by <a href="https://michellexliu.github.io/">Michelle Liu</a>, modified by <a href="https://github.com/achesin">Amanda Chesin.</a></p>
 				</p>
 			</div>
 			<div id="loggedin">
@@ -123,6 +123,9 @@
 						THANK YOU FOR VISITING!
 					</p>
 					<img src='barcode.png' />
+					<p class="website">
+						playlist-receiptify.herokuapp.com
+					</p>
 				</div>
 			</div>
 			<button class="btn" id="download">Download Image</button>
